# AI-assistant-for-SQL

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  streamlit_app.py  test_agent.py  test_chinook.py  test_csv.py  test_langchain.py  test_toolkit.py
app/: config.py  database.py  llm.py  main.py  prompts.py  sql_agent.py  utils.py
docs/: GITHUB_PRESENTATION.md
examples/: README.md
frontend/: styles.css
frontend/uploads/: 1784665116_sample_batch.csv  1784717948_sample_sales.csv
