[project]
name = "text2sql-agent"
version = "0.1.0"
description = "A simple text-to-SQL agent using LangChain's create_agent and Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.6",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/kevinbfrank/text-to-sql-agent"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
